small fixs for publishing to azure

--- a/YelpExplorer.Web/app/views/newTopicView.html
+++ b/YelpExplorer.Web/app/views/newTopicView.html
@@ -15,7 +15,7 @@
         </div>
         <div>
             <input type="submit" class="btn" value="Save" data-ng-disabled="newTopicForm.$invalid" />
-            <a href="#/topics" class="btn">Cancel</a>
+            <a href="topics" class="btn">Cancel</a>
         </div>
     </fieldset>
 </form>
