--- a/YelpExplorer.Web/app/views/singleTopicView.html
+++ b/YelpExplorer.Web/app/views/singleTopicView.html
@@ -32,7 +32,7 @@
             </div>
             <div>
                 <input type="submit" class="btn" value="Save" data-ng-disabled="newReplyForm.$invalid" />
-                <a href="#/topics" class="btn">Back</a>
+                <a href="topics" class="btn">Back</a>
             </div>
         </fieldset>
     </form>
